tag: 0.2.0. Removed old files.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Love stories'
 - !lcsh 'Fiction'
 - !lcc 'PR'
+- GITenberg
 title: 'God''s Good Man: A Simple Love Story'
 url: http://www.gutenberg.org/ebooks/4653
